# orbit.maze

./: .gitignore  README.md  _isaaclab  globals.py  pyproject.toml  readme.md
checkpoint_models/: trained_models.txt
config/: extension.toml
orbit/maze/tasks/: __init__.py
scripts/: convert_urdf.py  create_env.py  evaluate_model.py  multi_object.py  set_usd_options.py  vision_path.py
scripts/rsl_rl/: play.py  train.py
scripts/sb3/: play.py  train.py
urdfs/converter_output/: generated_maze_rov_02.usd  generated_simple_maze_01.usd  generated_simple_maze_02.usd  real_maze_01.usd  real_maze_02.usd
urdfs/generated_maze/: .asset_hash  config.yaml
urdfs/generated_maze_03/: .asset_hash  config.yaml  generated_maze_03.usd
urdfs/generated_maze_03/Props/: instanceable_meshes.usd
urdfs/generated_maze_03/meshes/: OuterDOF.STL
urdfs/real_maze_01/: real_maze_01.urdf
urdfs/real_maze_01/meshes/: OuterDOF.STL  Support.STL
usds/: Maze_Simple.usd  maze01.usd  multi_usd_paths.yaml
usds/generated_mazes/: generated_maze_02.yaml  generated_maze_rov_01.usd  generated_simple_maze_01.usd  maze01.yaml  maze01debug.yaml  real_maze_01.usd
usds/generated_mazes/correct_joint_limit/: generated_maze_rov_01_jointLimit.usd  generated_maze_rov_01_jointLimit.yaml  generated_maze_rov_02_jointLimit.usd  generated_maze_rov_02_jointLimit.yaml  generated_simple_maze_01_jointLimit.usd  generated_simple_maze_01_jointLimit.yaml  generated_simple_maze_02.usd  real_maze_01_jointLimit.usd  real_maze_01_jointLimit.yaml  real_maze_02.usd  real_maze_rounded.usd
(+14 files in other folders)
