# This section defines the build system requirements
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


# Project metadata
[project]
version = "0.1.0"
name = "maze"  # TODO
description = "Maze Extension Task for RL Learning"  # TODO
keywords = ["extension", "maze", "orbit"]  # TODO
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
  "Programming Language :: Python :: 3",
]
authors = [
  {name = "Kevin Schneider", email = "abc@xyz.ch"},  # TODO
]
maintainers = [
  {name = "Kevin Schneider", email = "abc@xyz.ch"},  # TODO
]


# Tool dependent subtables
[tool.setuptools]
py-modules = [
  'orbit'
]  # TODO, add modules required for your extension
